cmake_minimum_required(VERSION 3.26)
project(CStudyingPTIT)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(CStudyingPTIT
        appearancesort.cpp
        appearingonce.cpp
        basicoperation.cpp
        binarymatrix.cpp
        bubblesort.cpp
        changingbases.cpp
        coprimenumbers.cpp
        countcharactersstring.cpp
        countingappearances.cpp
        countingappearances2.cpp
        countprimenumbers.cpp
        countwordsstring.cpp
        decimalvalue.cpp
        diagonalmatrixproduct.cpp
        differentof2bigintergers.cpp
        digit4.cpp
        double.cpp
        encoding.cpp
        evenandodddigits.cpp
        evendivisors.cpp
        evenlyadvantageous.cpp
        fibonaccicheck.cpp
        fibonaccicheck2.cpp
        fibonaccinumber.cpp
        firstandlast.cpp
        firstlastexchange.cpp
        GCD.cpp
        GCDandLCM.cpp
        greatestprimedivisors.cpp
        highestnumber.cpp
        highestsubarray.cpp
        increasingsort.cpp
        insertionsort.cpp
        interchangesort.cpp
        intersectionof2arrays.cpp
        leadingnumbers.cpp
        linearequation.cpp
        listnondecrease.cpp
        listofsquarenumbers.cpp
        longestincreasesequence.cpp
        matrixproduct.cpp
        maxandminsum.cpp
        mergeandsort.cpp
        mergingrectange.cpp
        mixingstrings.cpp
        non9palindromic.cpp
        nondecreasingnumber.cpp
        Nprimenumbers.cpp
        numberedtriangle.cpp
        oddpalinromicnumbers.cpp
        pairofnumbers.cpp
        palindromeprimes.cpp
        palindromicarray.cpp
        Pascaltriangle.cpp
        perfectnumber.cpp
        perfectnumberinaninterval.cpp
        prettynumbers1.cpp
        prettynumbers2.cpp
        prettynumbers3.cpp
        prettynumbers4.cpp
        prettynumbers5.cpp
        primefractorization.cpp
        primenumber.cpp
        primenumberinanarray.cpp
        primenumberslowerthanN.cpp
        primespiralmatrix.cpp
        productofdigits.cpp
        productofprimefactors.cpp
        PTITemail.cpp
        quadraticequation.cpp
        removewordstring.cpp
        removingduplicates.cpp
        removingduplicatewords.cpp
        restoreasquence.cpp
        reversearray.cpp
        Romannumber.cpp
        selectionsort.cpp
        setofuniquewords.cpp
        shiftingleft.cpp
        shiftingright.cpp
        smallestsquare.cpp
        smallestsquare2.cpp
        speciallyevennumbers.cpp
        spiralmatrix.cpp
        splitinhalf.cpp
        splitting.cpp
        square.cpp
        squarenumber.cpp
        standardname.cpp
        strongnumber.cpp
        strongnumberinaninterval.cpp
        sum.cpp
        sumof2bigintergers.cpp
        sumofaninterval.cpp
        sumofdigits.cpp
        sumofdigitsdivisibleby10.cpp
        swappingcolumns.cpp
        swappingrows.cpp
        swappingrowsandcol.cpp
        transformtoequalizedarray.cpp
        transporematrix.cpp
        transposedmatrixproduct.cpp
        unionof2arrays.cpp)
